Cambiando y reestructurando el header

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,9 @@ body{
 }
 
 .header{
+    background-color: var(--warm-grey);
+}
+.navbar-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
