--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -161,14 +161,74 @@ main{
 }
 .carts{
     width: 200px;
-    height: auto;
+    height: 330px;
     padding: 30px 0;
 }
 .image_product{
     width: 100%;
     height: auto;
     border: 1px solid black;
+    border-radius: 7px;
 }
 .cart_info{
     text-align: center;
+}
+
+.container_buttonComparar, #container_comparar, .reiniciar_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 10px;
+}
+/* Footer */
+footer {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    padding: 20px;
+    background-color: #f0f0f0;
+}
+
+.footer-left img{
+    max-width: 100%;
+    height: auto;
+}
+.logo-footer{
+    width: 150px;
+    height: auto;
+}
+
+.footer-left, .footer-center, .footer-right {
+    width: 25%;
+}
+
+.container-logo-footer{
+    width: 150px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.container-logo-footer p{
+    font-size: 1.3rem;
+    color: #000000;
+    padding: 5px 15px;
+    text-align: center;
+}
+
+.footer-center h3, .footer-right h3 {
+    margin-bottom: 10px;
+    font-size: 1.4rem;
+}
+
+button {
+    display: block;
+    margin-bottom: 5px;
+    background-color: transparent;
+    border: transparent; 
+    padding: 5px 0px; 
+    color: #333; 
+    font-size: 1rem;
 }
