Editando las vistas footer y el header

--- a/app/views/header-index.html
+++ b/app/views/header-index.html
@@ -60,5 +60,6 @@
             </nav>
         </div>
     </header>
+    <script src="https://kit.fontawesome.com/b7897c31ae.js" crossorigin="anonymous"></script>
 </body>
 </html>
