Cambio de Javascript app

--- a/app/views/comparar.html
+++ b/app/views/comparar.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Compardos</title>
-        <link rel="shortcut icon" href="../img/CLogo.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="shortcut icon" href="/public/img/CLogo.png" type="image/x-icon">
+        <link rel="stylesheet" href="/public/css/normalize.css">
+        <link rel="stylesheet" href="/public/css/styles.css">
     </head>
     <body>
         <header class="header container-box">
             <section class="navbar-container">
                 <figure class="logo_container">
                     <a href="/index.html">
-                        <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
+                        <img class="logo" src="/public/img/CLogo.png" alt="Logo comparados">
                     </a>
                 </figure>
                 <nav class="menu">
@@ -30,7 +30,7 @@
                     </ul>
                     <ul class="cart_container">
                         <li class="menu_item menu_item-cart">
-                            <img class="" src="../img/icons/carrito-de-compras.png" alt="carrito de compras">
+                            <img class="" src="/public/img/icons/carrito-de-compras.png" alt="carrito de compras">
                             <a href="" class="manu_anchor menu_anchor-cart">Tu carrito</a>
                         </li>
                     </ul>
@@ -41,7 +41,7 @@
                 <h1 class="buscador_titulo">Escribe el producto que deseas comparar</h1>
                 <form id="buscador_form" class="buscador_form" action="">
                     <div class="buscador">
-                        <img src="../img/icons/busqueda-de-lupa.png" alt="lupa">
+                        <img src="/public/img/icons/busqueda-de-lupa.png" alt="lupa">
                         <input id="buscar_input" class="buscador_input" type="text" placeholder="Busca un producto">
                     </div>
                     <button id="buscador_submit" class="buscador_input submit">Comparar</button>
@@ -58,7 +58,7 @@
             <section id="productos_buscados" class="productos_buscados">
                 <div id="cart_uno" class="cart_uno carts">
                     <figure id="cart_figure" class="cart_figure">
-                        <img id="image_product1" class="image_product" src="../img/productos/farmatodo/harinaPan.png" alt="">
+                        <img id="image_product1" class="image_product" src="/public/img/productos/farmatodo/harinaPan.png" alt="">
                     </figure>
                     <div class="cart_info">
                         <p id="cart_nameProduct">Harina Pan de Maiz 1kg</p>
@@ -71,7 +71,7 @@
                 </div>
                 <div id="cart_dos" class="cart_dos carts">
                     <figure id="cart_figure2" class="cart_figure">
-                        <img id="image_product2" class="image_product" src="../img/productos/Elplazas/harinaPan.jpg" alt="">
+                        <img id="image_product2" class="image_product" src="/public/img/productos/Elplazas/harinaPan.jpg" alt="">
                     </figure>
                     <div id="cart_info" class="cart_info">
                         <p id="cart_nameProduct2">Harina Pan de Maiz 1kg</p>
@@ -94,35 +94,35 @@
                 </div>
             </section>
         </main>
-        <script src="../js/app.js"></script>
+        <footer>
+            <div class="footer-left">
+                <figure class="container-logo-footer">
+                    <a href="/index.html">
+                        <img class="logo-footer" src="/public/img/CLogo.png" alt="comparados">
+                    </a>
+                </figure>
+                <p>8XP5+CJ3, Carr. Panamericana, Los Teques 1201, Miranda</p>
+            </div>
+            <div class="footer-center">
+                <h3>Menú Principal</h3>
+                <button>Categorías</button>
+                <button>Favoritos</button>
+                <button>Comparador de Precios</button>
+                <button>Login</button>
+            </div>
+            <div class="footer-center">
+                <h3>Descubre</h3>
+                <button>El Equipo</button>
+                <button>Nuestra Historia</button>
+                <button>Nuestro Lema</button>
+            </div>
+            <div class="footer-right">
+                <h3>Encuéntranos en</h3>
+                <button>Facebook</button>
+                <button>Instagram</button>
+                <button>Twitter</button>
+            </div>
+        </footer>
+        <script src="/public/js/app.js"></script>
     </body>
-    <footer>
-        <div class="footer-left">
-            <figure class="container-logo-footer">
-                <a href="/index.html">
-                    <img class="logo-footer" src="../img/CLogo.png" alt="comparados">
-                </a>
-            </figure>
-            <p>8XP5+CJ3, Carr. Panamericana, Los Teques 1201, Miranda</p>
-        </div>
-        <div class="footer-center">
-            <h3>Menú Principal</h3>
-            <button>Categorías</button>
-            <button>Favoritos</button>
-            <button>Comparador de Precios</button>
-            <button>Login</button>
-        </div>
-        <div class="footer-center">
-            <h3>Descubre</h3>
-            <button>El Equipo</button>
-            <button>Nuestra Historia</button>
-            <button>Nuestro Lema</button>
-        </div>
-        <div class="footer-right">
-            <h3>Encuéntranos en</h3>
-            <button>Facebook</button>
-            <button>Instagram</button>
-            <button>Twitter</button>
-        </div>
-    </footer>
 </html>
