Cambiando el javascript app y actaulizando logica

--- a/app/views/comparar.html
+++ b/app/views/comparar.html
@@ -62,7 +62,7 @@
                     </figure>
                     <div class="cart_info">
                         <p id="cart_nameProduct">Harina Pan de Maiz 1kg</p>
-                        <p id="cart_priceProduct">$1.09</p>
+                        <p id="cart_priceProduct">1.90</p>
                         <p id="cart_nameProveedor">
                             Farmatodo
                             <i></i>
@@ -75,7 +75,7 @@
                     </figure>
                     <div id="cart_info" class="cart_info">
                         <p id="cart_nameProduct2">Harina Pan de Maiz 1kg</p>
-                        <p id="cart_priceProduct2">$1.11</p>
+                        <p id="cart_priceProduct2">1.11</p>
                         <p id="cart_nameProveedor2">
                             El Plazas <i></i>
                         </p>
