agregando nuevos archivos, login php

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPARADOS Login</title>
-    <link rel="shortcut icon" href="../img/CLogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/formstyle.css">
+    <link rel="shortcut icon" href="/public/img/CLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/public/css/normalize.css">
+    <link rel="stylesheet" href="/public/css/formstyle.css">
 </head>
 <body>
     <div class="formulario">
         <h1>Iniciar Sesión</h1>
         <form method="post">
             <div class="username">
-                <input type="text" required>
                 <label>Nombre de usuario</label>
+                <input type="text" required>
             </div>
             <div class="contraseña">
-                <input type="password" required>
                 <label>Contraseña</label>
+                <input type="password" required>
             </div>
             <div class="recordar">¿Olvidó su Contraseña?</div>
             <input type="submit" value="Iniciar">
